syntax = "proto3";

import "app/trian/proto/user.proto";
import "app/trian/proto/roles.proto";

package app.trian.model;

option java_multiple_files = true;

service Authentication{
  rpc signInBasic(SignInRequest) returns (SignInResponse){}
}

message SignInRequest{
  string email=1;
  string password=2;
}

message SignInResponse{
  bool success=1;
  string message=2;
  optional UserResponse users=3;
  repeated RolesResponse roles=4;
}